Fix alignment of breacrumbs

--- a/src/pydata_sphinx_theme/assets/styles/components/_breadcrumbs.scss
+++ b/src/pydata_sphinx_theme/assets/styles/components/_breadcrumbs.scss
@@ -12,7 +12,7 @@ ul.bd-breadcrumbs {
 
   li.breadcrumb-item {
     display: flex;
-    align-items: center;
+    align-items: baseline;
 
     // Style should look like heavier in-page links
     font-weight: bold;
